build.gradle: enable native access for Java versions >= 17