@@ -28,6 +28,7 @@ tasks.withType(JavaCompile).configureEach { // Java compile-time options:
 
 import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
 Boolean isMacOS = DefaultNativePlatform.currentOperatingSystem.isMacOsX()
+Boolean enableNativeAccess = JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)
 
 tasks.withType(JavaExec).configureEach { // Java runtime options:
     if (isMacOS) {
@@ -37,6 +38,9 @@ tasks.withType(JavaExec).configureEach { // Java runtime options:
     classpath sourceSets.main.runtimeClasspath
     dependsOn 'installDist'
     enableAssertions = true
+    if (enableNativeAccess) {
+        jvmArgs '--enable-native-access=ALL-UNNAMED' // suppress System::load() warning
+    }
     //jvmArgs '-verbose:gc'
     //jvmArgs '-Xms512m', '-Xmx512m' // to enlarge the Java heap
     //jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
